--- a/prelims.tex
+++ b/prelims.tex
@@ -73,8 +73,8 @@ if $|\rho| < \infty$ then $\delta(z_{|\rho|},u)= \emptyset$ for all $u\in U$.
 Let $\set{\Sigma^i}_{i\in [1;N]}$, $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$, be a set of $N$ control systems. 
 We assume that all of the control systems within $\set{\Sigma^i}_{i\in [1;N]}$ share an output space $Y\subseteq\reals^p$ to which there exists a set of projections of the form $h^i\colon X^i\rightarrow Y$. Remember our motivating example, wherein the crane's state space consists of the cart's position ($z$), the cart's speed ($\dot z$), the pendulum's angular position ($\theta$), and angular speed ($\dot \theta$). The state space for the vehicle is described with only one state variable $z'$ describing its position. Note that $X^1\subseteq \reals^4$ and $X^2\subseteq \reals$. Now, defining $h^1=\begin{bmatrix}z+l\sin(\theta)&0.6+l\cos(\theta)\end{bmatrix}^T$ and $h^2=\begin{bmatrix}z'&0.4\end{bmatrix}^T$, both state spaces can be projected to $Y\subseteq \reals^2$ in which we would like to compute distance.
 %For example, in a multi-robot scenario, all of the robots move within a two or three dimensional space independent of their individual dynamics.
-We define distance between two control systems as $D\colon X^i\times X^j\rightarrow \reals_{\geq 0}$, $D\colon (u,v)\mapsto\| h^i(u)-h^j(v)\|$. We extend the definition of $D$ to measure distance between a system's state and a set defined over the shared output space: for any given $u\in X^i$ and $V\subseteq X^i$, $D(u,V) \coloneqq \inf_{v\in V}\|u-v\|$. The \emph{product control system of } $\set{\Sigma^i}_{i\in [1;N]}$ is the control system $\Sigma^\times = (X^\times, x_\init^\times, U^\times, \set{0^n}, f^\times, D)$ wherein $X^\times\coloneqq X^1\times \ldots \times X^N$ and we assume that $\sum_{i\in [1;N]} n_i=n$, $x_\init^\times\coloneqq (x_\init^1,\ldots,x_\init^N)$, $U^\times\coloneqq U^1\times\dots\times U^N\subset \reals^m$ and $f^\times\coloneqq f^{1}\otimes \ldots\otimes f^{N}$. 
-We use the state projection operator $\proj^{i}\colon X^\times\to X^i$, $\proj^{i}\colon (x^1,\ldots,x^N)\mapsto x^i$. We extend definition of $\proj^i$ to denote projection of a set $A\subseteq X^\times$ to $X^i$ as $\proj^i(A)\coloneqq \set{x\mid \exists x^\times\in A.\;\proj^i(x^\times)=x}$.
+We define distance between two control systems as $D\colon X^i\times X^j\rightarrow \reals_{\geq 0}$, $D\colon (u,v)\mapsto\| h^i(u)-h^j(v)\|$. We extend the definition of $D$ to measure distance between a system's state and a set defined over the shared output space: for any given $u\in X^i$ and $V\subseteq Y$, $D(u,V) \coloneqq \inf_{v\in V}\|h^i(u)-v\|$. The \emph{product control system of } $\set{\Sigma^i}_{i\in [1;N]}$ is the control system $\Sigma^\times = (X^\times, x_\init^\times, U^\times, \set{0^n}, f^\times, D)$ wherein $X^\times\coloneqq X^1\times \ldots \times X^N$ and we assume that $\sum_{i\in [1;N]} n_i=n$, $x_\init^\times\coloneqq (x_\init^1,\ldots,x_\init^N)$, $U^\times\coloneqq U^1\times\dots\times U^N\subset \reals^m$ and $f^\times\coloneqq f^{1}\otimes \ldots\otimes f^{N}$. 
+We use the state projection operator $\proj^{i}\colon X^\times\to X^i$, $\proj^{i}\colon (x^1,\ldots,x^N)\mapsto x^i$. %We extend definition of $\proj^i$ to denote projection of a set $A\subseteq X^\times$ to $X^i$ as $\proj^i(A)\coloneqq \set{x\mid \exists x^\times\in A.\;\proj^i(x^\times)=x}$.
 From here on, we will omit the domain of $i$ and will use ``$\set{\Sigma^i}$'' instead of ``$\set{\Sigma^i}_{i\in [1;N]}$'' for simpler notation.
 
 \smallskip
